--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.12)
 project(Trajectory)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Trajectory main.cpp sommet.h segment.h)
+add_executable(Trajectory main.cpp sommet.cpp segment.cpp)
