--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.12)
 project(Trajectory)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Trajectory main.cpp sommet.cpp segment.cpp no_graph.cpp dijkstra.cpp read_map.cpp test/tests.cpp)
+add_executable(Trajectory main.cpp sommet.cpp segment.cpp no_graph.cpp dijkstra.cpp )
 
 ##for gtest
 #include_directories(.)
