--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 project(Trajectory)
 set(CMAKE_CXX_STANDARD 17)
-
-add_executable(Trajectory main.cpp sommet.cpp segment.cpp no_graph.cpp dijkstra.cpp )
+set ( CMAKE_C_FLAGS "lstdc++fs")
+add_executable(Trajectory main.cpp sommet.cpp segment.cpp obstacle.cpp dijkstra.cpp optimal_path.cpp config.cpp)
+#add_executable(Trajectory main.cpp sommet.cpp segment.cpp no_graph.cpp dijkstra.cpp )
 
 ##for gtest
 include_directories(.)
@@ -12,5 +13,3 @@ add_executable(runTests test/tests.cpp)
 target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
 
 #add_executable(Trajectory main.cpp sommet.cpp segment.cpp arc.cpp graphe.cpp dijkstra.cpp)
-set ( CMAKE_C_FLAGS "lstdc++fs")
-add_executable(main.cpp sommet.cpp segment.cpp obstacle.cpp dijkstra.cpp optimal_path.cpp config.cpp)
